# pico_rfid_gadget

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VSCODE.md
src/: main.c  main_old.c
src/lib/: 7941w.c  7941w.h
